addons/traefik/traefik-ing-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.k3s.local`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
 name: traefik-https
 namespace: traefik
spec:
 entryPoints:
   - websecure
 routes:
   - match: Host(`traefik.k3s.local`) && PathPrefix(`/`)
     kind: Rule
     services:
       - name: traefik
         port: 443
 tls:
   secretName: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kuboard
  namespace: kuboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kuboard.k3s.local`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: kuboard-v3
          port: 80
